libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/LUSEGDA.NSN
DEFINE DATA
LOCAL USING MYGDA
END-DEFINE

END
